// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly expenseSumary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
    . Total: 
    $2.33
  </h3>
</div>
`;

exports[`Should render correctly expenseSumary with 2 expenses 1`] = `
<div>
  <h3>
    Viewing 
    44
     
    expenses
    . Total: 
    $2,323,566.23
  </h3>
</div>
`;
